--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
    <body>
        <div class="container">
        <div class="instagramTop">
-           <div class="htmlLogo"><i class="fa fa-html5" aria-hidden="true"></i>
-            <i class="fa fa-ellipsis-v" aria-hidden="true"></i><p class="classs"><strong>HTML5</strong><br> Rigoberto</p>
-           </div>
+           <i class="fa fa-html5" aria-hidden="true"><span class="joelFace"><strong>HTML5</strong></span></i>
+             <i class="fa fa-ellipsis-v" aria-hidden="true"></i><p>Rigoberto</p>
        </div>
        <div class="instagramMidle">
            <div class="image">
                <img src="img.jpg">
                
            </div>
-           <div class="icons"><spawn><i class="fa fa-heart-o" aria-hidden="true"></i></spawn><spawn><i class="fa fa-comment-o" aria-hidden="true"></i></spawn><spawn><i class="fa fa-paper-plane-o" aria-hidden="true"></i></spawn></div>
-           <i class="fa fa-bookmark-o" aria-hidden="true"></i>
+           <div class="icons"><spawn><i class="fa fa-heart-o" aria-hidden="true"></i></spawn><spawn><i class="fa fa-comment-o" aria-hidden="true"></i></spawn><spawn><i class="fa fa-paper-plane-o" aria-hidden="true"></i></spawn><i class="fa fa-bookmark-o" aria-hidden="true"></i>
+           </div>
 
        </div>
        <div class="instagramBottom">
